# tcsp

./: Cargo.toml  README.md  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
examples/: can_server.rs  can_telemetry_client.rs  uart_client.rs  uart_server.rs  zero_client.rs  zero_server.rs
examples/common/: mod.rs
scripts/: install_can_service.sh  install_uart_service.sh
src/: lib.rs  main.rs  server.rs  utils.rs
src/adaptor/: can.rs  channel.rs  error.rs  frame.rs  mod.rs  uart.rs
src/adaptor/can/: mod.rs  slot.rs  ty.rs
src/application/: download.rs  echo.rs  fallback.rs  mod.rs  reboot.rs  reset_network.rs  telemetry.rs  time_sync.rs  udp_backup.rs  udp_control.rs  upload.rs
src/protocol/: frame.rs  mod.rs
src/protocol/v1/: frame.rs
src/tests/: mod.rs  send.py  test_server.rs
src/uart/: protocol.rs
