[package]
name = "tcsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bitfield = "0.15.0"
bitflags = "2.5.0"
futures-util = "0.3.30"
log = "0.4.21"
num_enum = "0.7.2"
socketcan = {version = "3.3.0", features = ["tokio"]}
thiserror = "1.0.61"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
