[package]
name = "tcsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bitfield = "0.15.0"
bitflags = "2.5.0"
futures-util = "0.3.30"
log = "0.4.21"
num_enum = "0.7.2"
socketcan = {version = "3.3.0", features = ["tokio"]}
libc = "0.2.155"
termios = "0.3.3"
nom = "7"
tokio = {version = "1.38.0", features = ["full"]}
nix = {version = "0.29.0", features = ["fs"]}
crc32fast = "1.4.2"
thiserror = "1.0.61"
env_logger = "0.11.3"
chrono = "0.4.38"
serialport = "4.3.0"
crc = "3.2.1"

[features]
default=["unstable_add_frameheader"]
unstable_add_frameheader=[]