[package]
name = "tcsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bitfield = "0.15.0"
bitflags = "2.5.0"
futures-util = "0.3.30"
log = "0.4.21"
num_enum = "0.7.2"
socketcan = {version = "3.3.0", features = ["tokio"]}
nom = "7"
tokio = {version = "1.38.0", features = ["full"]}
thiserror = "1.0.61"
env_logger = "0.11.3"
chrono = "0.4.38"
serialport = {version = "4.3.0", default-features = false}
crc = "3.2.1"
libc = "0.2.155"
clap = {version="4.5.11",features=["derive"]}
zeromq = "0.4.0"

[features]
default=[]
unstable_crc32=[]
unstable_upload_and_download=[]
libudev=["serialport/default"]
netlink_can_error_detection=[]
d2000=["netlink_can_error_detection"]

[profile.release]
panic = 'abort'
